--- a/Develop/package.json
+++ b/Develop/package.json
@@ -1,17 +1,19 @@
 {
-  "name": "js",
+  "name": "note-taker",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server.js"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
+    "express": "^4.16.4",
     "fs": "^0.0.1-security",
+    "nodemon": "^2.0.22",
     "uuid": "^9.0.0"
   }
+  
 }
